Fix vertical gap in grid

--- a/src/styles/feed.scss
+++ b/src/styles/feed.scss
@@ -30,6 +30,7 @@
   .feed-list {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    gap: 4rem 0;
     @include md {
       grid-template-columns: 1fr 1fr;
     }
